# rules_go

./: .bazelversion  BUILD.bazel  MODULE.bazel  README.rst  WORKSPACE
.bazelci/: presubmit.yml
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
docs/go/core/: rules.md
extras/: gomock.bzl
go/: BUILD.bazel  def.bzl  go_binary.bzl  go_library.bzl  go_test.bzl
go/config/: BUILD.bazel
go/private/: BUILD.bazel  BUILD.sdk.bazel  context.bzl  extensions.bzl  mode.bzl  platforms.bzl  repositories.bzl  sdk.bzl
go/private/actions/: archive.bzl  binary.bzl  compilepkg.bzl  link.bzl  stdlib.bzl
go/private/experimental/: bootstrap_rules.bzl
go/private/rules/: binary.bzl  cgo.bzl  cross.bzl  info.bzl  library.bzl  nogo.bzl  source.bzl  stdlib.bzl  test.bzl  transition.bzl
go/runfiles/: manifest.go  runfiles.go
go/tools/builders/: BUILD.bazel  cgo2.go  cgo_response.go  cgo_response_test.go  compilepkg.go  env.go  filter.go  filter_test.go  nogo_main.go  protoc.go
go/tools/gopackagesdriver/: bazel.go  gopackagesdriver_test.go
go/tools/releaser/: BUILD.bazel  file.go  releaser.go
proto/: compiler.bzl  def.bzl
tests/bcr/: .bazelrc  .bazelversion  MODULE.bazel
tests/core/cgo/: BUILD.bazel
tests/core/entry_points/: BUILD.bazel  entry_bin.go  entry_lib.go  entry_test.go
tests/core/go_binary/: BUILD.bazel  many_deps.bzl
tests/core/go_proto_aspect/: codegen.bzl
tests/core/path_mapping/: BUILD.bazel  path_mapping_test.go
tests/core/starlark/: provider_tests.bzl
tests/core/transition/: hermeticity_test.go
tests/integration/: README.rst
(+6 files in other folders)
